--- a/package.json
+++ b/package.json
@@ -7,9 +7,13 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.24.0",
+    "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.7.2",
     "react": "^17.0.2",
     "react-axios": "^2.0.5",
+    "react-bootstrap": "^2.1.0",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-scripts": "5.0.0",
     "react-select": "^5.2.1",
     "web-vitals": "^2.1.2"
