--- a/api/package.json
+++ b/api/package.json
@@ -11,12 +11,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.2",
     "express": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
     "node-postgres": "^0.6.2",
-    "pg": "^8.8.0"
+    "pg": "^8.8.0",
+    "sequelize": "^6.25.8",
+    "uid": "^2.0.1",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
